<resources>
    <string name="app_name">Lab1_Sidorenko_053505</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fa_times_circle">\uf057</string>fa-exchange
    <string name="fa_exchange">\uf0ec</string>

    <string name="fa_usd">\uf155</string>
    <string name="fa_arrows_h">\uf07e</string>
    <string name="fa_tachometer">\uf0e4</string>
    <string name="fa_clone">\uf24d</string>
</resources>