<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.9"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                style="@style/ActionButton"
                android:text="@string/fa_usd"/>
            <TextView
                style="@style/ActionButton"
                android:text="@string/fa_arrows_h"/>
            <TextView
                style="@style/ActionButton"
                android:text="@string/fa_tachometer"/>


        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.7"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                style="@style/TextViewStyle"
                android:layout_weight="3"
                android:text="Исходные данные"/>
            <TextView
                style="@style/ActionButton"
                android:layout_weight="0.5"
                android:textSize="20dp"
                android:text="@string/fa_clone"/>
            <TextView
                style="@style/TextViewStyle"
                android:text="м"/>


        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.7"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                style="@style/TextViewStyle"
                android:text="Конвертированые данные"/>
            <TextView
                style="@style/ActionButton"
                android:layout_weight="0.2"
                android:textSize="20dp"
                android:text="@string/fa_clone"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                style="@style/NumberButton"
                android:text="7"/>
            <TextView
                style="@style/NumberButton"
                android:text="8"/>
            <TextView
                style="@style/NumberButton"
                android:text="9"/>
            <TextView
                style="@style/ActionButton"
                android:layout_weight="1.5"
                android:text="@string/fa_times_circle" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                style="@style/NumberButton"
                android:text="4"/>
            <TextView
                style="@style/NumberButton"
                android:text="5"/>
            <TextView
                style="@style/NumberButton"
                android:text="6"/>
            <TextView
                style="@style/ActionButton"
                android:layout_weight="1.5"
                android:text="C" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                style="@style/NumberButton"
                android:text="1"/>
            <TextView
                style="@style/NumberButton"
                android:text="2"/>
            <TextView
                style="@style/NumberButton"
                android:text="3"/>
            <TextView
                style="@style/ActionButton"
                android:layout_weight="1.5"
                android:textSize="40dp"
                android:text="="/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                style="@style/NumberButton"
                android:text="00"/>
            <TextView
                style="@style/NumberButton"
                android:text="0"/>
            <TextView
                style="@style/NumberButton"
                android:text="."/>
            <TextView
                style="@style/ActionButton"
                android:layout_weight="1.5"
                android:text="@string/fa_exchange"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>